<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_main"
            android:title="@string/drawer_main" />
        <item
            android:id="@+id/nav_associations"
            android:icon="@drawable/ic_assoc"
            android:title="@string/drawer_associations" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_friends"
            android:title="@string/drawer_friends" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_chat"
            android:title="@string/drawer_chats" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/drawer_settings" />
        <item
            android:id="@+id/nav_login_logout"
            android:icon="@drawable/ic_login_logout"
            android:title="@string/drawer_login" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/drawer_about_us" />
    </group>
</menu>