<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MainFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_night_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/settings_dark_mode"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/text_notifications"
            app:layout_constraintEnd_toStartOf="@+id/switch_night_light"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Switch
            android:id="@+id/switch_night_light"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_marginBottom="3dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="24dp"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/text_notifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/settings_notifications"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/anonym_text"
            app:layout_constraintEnd_toStartOf="@+id/switch_notifications"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_night_light" />

        <Switch
            android:id="@+id/switch_notifications"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="20dp"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch_night_light" />

        <TextView
            android:id="@+id/anonym_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/anonymity"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/clear_text"
            app:layout_constraintEnd_toStartOf="@+id/switch_chat_anonym"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_notifications" />

        <Switch
            android:id="@+id/switch_chat_anonym"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_marginBottom="3dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="24dp"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="@id/switch_notifications"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/button_clear_cache"
            app:layout_constraintVertical_bias="0.558" />

        <TextView
            android:id="@+id/clear_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="28dp"
            android:text="@string/settings_clear_cache"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/button_clear_cache"
            app:layout_constraintHorizontal_bias="0.011"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/anonym_text" />

        <Button
            android:id="@+id/button_clear_cache"
            android:layout_width="69dp"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/settings_clear_cache_button"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch_chat_anonym" />

    </android.support.constraint.ConstraintLayout>

</FrameLayout>